# openGL_clion

./: .gitignore  CMakeLists.txt
Libraries/include/GLFW/: CMakeLists.txt
Libraries/include/glad/: CMakeLists.txt  glad.h
imGui/: CMakeLists.txt
source/: IClonable.hpp  application.cpp  application.hpp  camera.cpp  camera.hpp  cameraManager.cpp  cameraView.cpp  dataTypes.hpp  deltaTime.cpp  deltaTime.hpp  followingCamera.hpp  keyBinds.hpp  lightBase.hpp  lightManager.hpp  lightSource.cpp  lightSource.hpp  main.cpp  movingCamera.cpp  movingCamera.hpp  objectList.cpp  objectList.hpp  objectShape.cpp  objectShape.hpp  sceneManager.cpp  sceneManager.hpp  sceneView.cpp  sphereShape.hpp  texture.hpp  uiView.cpp  window.hpp
source/interfaces/: IClonable.hpp  IFollowable.hpp
source/objects/: glad.c  sceneManager.cpp  sceneManager.hpp  shader.cpp  shader.hpp  shadersC.cpp  shadersC.hpp  texture.hpp
source/objects/camera/: camera.cpp  camera.hpp  cameraManager.cpp  cameraManager.hpp  followingCamera.cpp  followingCamera.hpp  followingRotatableCamera.cpp  followingRotatableCamera.hpp  movingCamera.cpp  movingCamera.hpp
source/objects/light/: lightBase.hpp  lightDirectional.hpp  lightManager.cpp  lightManager.hpp  lightPoint.hpp  lightSource.hpp  lightSpotlight.hpp  lightSpotlightFollowing.cpp  lightSpotlightFollowing.hpp
source/objects/models/: bezierShape.cpp  bezierShape.hpp  cubeShape.hpp  objectList.cpp  (+5 more)
source/views/: cameraView.cpp  cameraView.hpp  sceneView.cpp  sceneView.hpp  subView.hpp  uiView.cpp  uiView.hpp  view.hpp
sphere/: CMakeLists.txt
